# docs/swagger/sota-device_registry.yml
@@ -386,6 +386,27 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/DevicesCount'
+  /active_device_count:
+    get:
+      description: returns count of devices active during the given time interval
+      parameters:
+      - name: start
+        in: query
+        description: start time (inclusive)
+        required: true
+        type: string
+        format: offsetDateTime
+      - name: end
+        in: query
+        description: end time (exclusive)
+        required: true
+        type: string
+        format: offsetDateTime
+      responses:
+        200:
+          description: OK
+          schema:
+            $ref: '#/definitions/ActiveDevicesCount'
 
 definitions:
   uuid:
@@ -433,6 +454,10 @@ definitions:
         type: string
         format: dateTime
         description: The time the device was created
+      activatedAt:
+        type: string
+        format: dateTime
+        description: The time the device was activated
   SystemInfo:
     type: object
     description: A json object representing system info. No schema yet defined.
@@ -480,3 +505,6 @@ definitions:
         type: array
         items:
           $ref: '#/definitions/uuid'
+  ActiveDevicesCount:
+    type: integer
+    description: count of active devices (in a given interval)
